@startuml

package "de.andrena.codingaider.settings" {
    class AiderDefaults {
        +ALWAYS_INCLUDE_OPEN_FILES: Boolean
        +USE_STRUCTURED_MODE: Boolean
        +DOCKER_IMAGE: String
    }

    class AiderSettings {
        +getState(): State
        +loadState(state: State)
    }

    class AiderTestCommand {
        +execute(observer: CommandObserver?, useDockerAider: Boolean)
    }

    class AiderProjectSettings {
        +getState(): State
        +loadState(state: State)
    }

    class AiderSettingsConfigurable {
        +createComponent(): JComponent
        +apply()
    }

    class AiderProjectSettingsConfigurable {
        +createComponent(): JComponent
        +apply()
    }
}

AiderSettings --> AiderDefaults
AiderTestCommand --> AiderSettings
AiderProjectSettings --> AiderDefaults
AiderSettingsConfigurable --> AiderSettings
AiderProjectSettingsConfigurable --> AiderProjectSettings

@enduml
